--- a/.gitattributes
+++ b/.gitattributes
@@ -3201,6 +3201,7 @@ rtl/emx/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/emx/system.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/emx/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/emx/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/freebsd/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
