Forgot to add the Win32 resources implementation
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1014 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3926,6 +3926,7 @@ rtl/win32/syswin32.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win32/win32res.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/wincrt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
