--- a/.gitattributes
+++ b/.gitattributes
@@ -425,6 +425,7 @@ compiler/utils/fpccfg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/utils/fpcmkcfg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpcsubst.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/fpimpdef.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/utils/fppkg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/gppc386.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/mk68kreg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/utils/mkarmreg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3175,7 +3176,6 @@ rtl/bsd/x86_64/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 rtl/common/fpmake.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/common/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/common/fpmkpkg.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/common/fpmkpkg.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/common/fpmkunit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/darwin/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
