--- a/.gitattributes
+++ b/.gitattributes
@@ -188,6 +188,7 @@ compiler/m68k/r68ksri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/m68k/r68ksta.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/r68kstd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/r68ksup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/m68k/ra68k.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/ra68kmot.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/m68k/rgcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/mips/aasmcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
