--- a/.gitattributes
+++ b/.gitattributes
@@ -52,6 +52,7 @@ compiler/arm/itcpugas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 compiler/arm/narmadd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narmcal.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narmcnv.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/arm/narmcon.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narminl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/narmmat.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/arm/raarm.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
