* powerpc64 port from Thomas Schatzl
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1193 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -320,6 +320,45 @@ compiler/powerpc/rppcsri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 compiler/powerpc/rppcstab.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/powerpc/rppcstd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/powerpc/rppcsup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/aasmcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/agppcgas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/aoptcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/aoptcpub.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/aoptcpuc.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/aoptcpud.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cgcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpubase.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpuinfo.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpunode.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpupara.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpupi.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cpuswtch.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/cputarg.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/itcpugas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppcadd.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppccal.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppccnv.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppcinl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppcld.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppcmat.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/nppcset.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rappc.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rappcgas.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rgcpu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppccon.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcdwrf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcgas.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcgri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcgss.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcmot.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcmri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcnor.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcnum.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcrni.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcsri.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcstab.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcstd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/powerpc64/rppcsup.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/pp.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/ppheap.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/ppu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3427,6 +3466,13 @@ rtl/linux/powerpc/stat.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 rtl/linux/powerpc/syscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/powerpc/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/powerpc/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/bsyscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/sighndh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/stat.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/syscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/syscallh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/linux/powerpc64/sysnr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/pthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/linux/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3779,6 +3825,19 @@ rtl/powerpc/stringss.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/powerpc/strlen.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/powerpc/strpas.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/powerpc/sysutilp.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/int64p.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/math.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/mathu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/mathuh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/powerpc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/set.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/setjump.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/setjumph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/strings.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/stringss.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/strlen.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/strpas.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/powerpc64/sysutilp.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/solaris/errno.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
