--- a/.gitattributes
+++ b/.gitattributes
@@ -5914,6 +5914,7 @@ tests/webtbs/tw3805.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3812.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3814.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3827.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/webtbs/tw3829.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw3833.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3840.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3863.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
