new tests for mode macpas
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1592 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5004,10 +5004,12 @@ tests/test/tinterrupt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tintuint.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tlibrary1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tlibrary2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmacfunret.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmacprocvar.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmath1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmmx1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmove.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
